# coroutines_classes

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  library.cmake
doc/: exceptions.md  future.md  mutex.md  pause_suspend.md  queue.md  resume_lock.md  sync_await.md  task.md  thread_pool.md
src/coclasses/: abstract_awaiter.h  aggregator.h  async.h  awaiter.h  awaiter_transform.h  barrier.h  callback_await.h  callback_generator.h  cancelable.h  co_alloc.h  co_new.h  coid.h  common.h  condition_variable.h  coro_policy_holder.h  coro_storage.h  coroid.h  counter.h  debug.h  detached.h  dispatcher.h  exceptions.h  function.h  future.h  future_var.h  generator.h  generator_aggregator.h  handle.h  iterator.h  lazy.h  limited_queue.h  mutex.h  no_alloc.h  nocoro.h  parallel_resumption_policy.h  pause.h  poolalloc.h  priority_queue.h  publisher.h  queue.h  (+22 more)
src/cotest/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt  async.cpp  barrier.cpp  blocking_limited_queue.cpp  callback_awaiter.cpp  callback_generator.cpp  cancelable_task.cpp  cancelable_timer.cpp  cancelable_timer_lazy.cpp  cooperative_multitasking.cpp  counter.cpp  detached.cpp  detached_thread_pool.cpp  discard_future.cpp  dispatcher.cpp  dispatcher_failed_resume.cpp  dispatcher_timers.cpp  fork.cpp  future.cpp  future_coro.cpp  future_transform.cpp  generator.cpp  generator_aggregator.cpp  generator_aggregator_async.cpp  generator_aggregator_async_infinite.cpp  generator_aggregator_infinite.cpp  generator_aggregator_with_arg.cpp  generator_async.cpp  generator_async_await.cpp  generator_async_await_exception.cpp  generator_async_await_limited.cpp  generator_async_callback.cpp  generator_await.cpp  generator_callback.cpp  generator_infinite.cpp  generator_iterator.cpp  generator_with_arg.cpp  goroutine1.cpp  make_promise.cpp  multi_source_future.cpp  (+21 more)
src/main/: coclasses.h  main.cpp
