cmake_minimum_required(VERSION 3.2) 

add_executable (task  task.cpp)
add_executable (future  future.cpp)
add_executable (make_promise  make_promise.cpp)
add_executable (generator_infinite  generator_infinite.cpp)
add_executable (generator  generator.cpp)
add_executable (generator_await  generator_await.cpp)
add_executable (generator_async_await  generator_async_await.cpp)
add_executable (generator_async  generator_async.cpp)
add_executable (generator_callback  generator_callback.cpp)
add_executable (generator_async_callback  generator_async_callback.cpp)
add_executable (generator_aggregator_infinite  generator_aggregator_infinite.cpp)
add_executable (generator_aggregator_async_infinite  generator_aggregator_async_infinite.cpp)
add_executable (generator_aggregator  generator_aggregator.cpp)
add_executable (generator_aggregator_async  generator_aggregator_async.cpp)
