cmake_minimum_required(VERSION 3.2) 

add_executable (task  task.cpp)
add_executable (future  future.cpp)
add_executable (make_promise  make_promise.cpp)
add_executable (generator_infinite  generator_infinite.cpp)
add_executable (generator  generator.cpp)
add_executable (generator_iterator generator_iterator.cpp)
add_executable (generator_await  generator_await.cpp)
add_executable (generator_async_await  generator_async_await.cpp)
add_executable (generator_async  generator_async.cpp)
add_executable (generator_callback  generator_callback.cpp)
add_executable (generator_async_callback  generator_async_callback.cpp)
add_executable (generator_aggregator_infinite  generator_aggregator_infinite.cpp)
add_executable (generator_aggregator_async_infinite  generator_aggregator_async_infinite.cpp)
add_executable (generator_aggregator  generator_aggregator.cpp)
add_executable (generator_aggregator_async  generator_aggregator_async.cpp)
add_executable (cooperative_multitasking cooperative_multitasking.cpp)
add_executable (scheduler scheduler.cpp)
add_executable (scheduler_single_thread scheduler_single_thread.cpp)
add_executable (mutex mutex.cpp)
add_executable (thread_pool thread_pool.cpp)
add_executable (fork fork.cpp)
add_executable (queue queue.cpp)
add_executable (with_queue with_queue.cpp)
add_executable (publisher_subscriber publisher_subscriber.cpp)
add_executable (cancelable_timer cancelable_timer.cpp)
add_executable (cancelable_timer_lazy cancelable_timer_lazy.cpp)
add_executable (cancelable_task cancelable_task.cpp)
add_executable (goroutine1 goroutine1.cpp)
add_executable (parallel_resumption_policy parallel_resumption_policy.cpp)
add_executable (thread_pool_resumption_policy thread_pool_resumption_policy.cpp)
add_executable (barrier barrier.cpp)
add_executable (shared_state shared_state.cpp)
add_executable (pause pause.cpp)
add_executable (dispatcher dispatcher.cpp)
add_executable (dispatcher_failed_resume dispatcher_failed_resume.cpp)
add_executable (multi_source_future multi_source_future.cpp)



